...
        )}
      </TouchableOpacity>
    );
  };

  return (
    <SafeAreaView testID="pos-screen" style={styles.container} edges={['top']}>
      {/* Header */}
      <View style={styles.header}>
        <View>
          <Text style={styles.greeting}>Bonjour, {employee?.fullName?.split(' ')[0]}</Text>
          <View style={styles.warehouseInfo}>
            <Ionicons 
...
